--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "babel-loader": "^8.0.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.0",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
